--- a/style.css
+++ b/style.css
@@ -4,7 +4,12 @@ body{
     margin: 0;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     padding-top: 2%;
+}
+
+#other{
+    display: flex;
 }
 
 #grid{
@@ -14,8 +19,8 @@ body{
 }
 
 .cell{
-    width: 50px;
-    height: 50px;
+    width: 2em;
+    height: 2em;
     background-color: rgb(90, 82, 82);
     border: white 1px solid;
 }
